[project]
name = "mqtt2influxdb"
version = "0.0.1"
description = ""
authors = [
	{ name = "Tobias Müller", email = "Tobias_Mueller@twam.info" }
]
license = "MIT"
requires-python = ">=3.12"
dependencies = [
	"python-daemon>=3.0.1,<4",
	"PyYAML>=6.0,<7",
	"paho-mqtt>=1.6,<2", # asyncio-mqtt isn't working with 2, yet
	"influxdb>=5.3.1,<6"
]

[project.scripts]
mqtt2influxdb = 'mqtt2influxdb.mqtt2influxdb:main'

[dependency-groups]
dev= [
	"ruff",
	"pytest",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 140

[tool.ruff.lint]
# "ANN", 
select = ["F", "E", "W", "I", "N", "UP", "YTT", "ASYNC", "BLE", "FBT", "B", "COM", "C4", "DTZ", "EM", "EXE", "FA", "ISC", "ICN", "LOG", "G", "INP", "PIE", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "INT", "ARG", "PTH", "FIX", "ERA", "NPY", "RUF"]
ignore = ["EXE002", "G004"]

